--- a/index.html
+++ b/index.html
@@ -17,44 +17,42 @@
 <!-- ------------------------------------------------------------------------------ -->
 
 <!-- Nav bar -->
-<div class="container top">
-    <div class="row">
-        <div class="col">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#"> ALEKS.</code></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
-                        aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse nav-buttons" id="navbarColor03">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Experience</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+<div id="top" class="row">
+    <div class="col">
+        <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"> ALEKS.</code></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
+                    aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse nav-buttons" id="navbarColor03">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#experience">Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="contacts" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
 </div>
+
 <!-- First part image -->
 <div class="container main">
     <div class="row">
         <!-- Start Left Content -->
-        <div class="col-md-4 col-sm-12 order-2 order-md-1 xs-padding-50px-tb">
+        <div class="general-info">
             <div class="row mt-5 mb-5" height="500"></div>
             <div class="padding-twenty-top sm-padding-fifteen-top xs-no-padding">
                 <h5 class="left-margin-15 no-margin font-size18 xs-font-size16 text-medium-gray">
@@ -71,14 +69,42 @@
                     <a href="javascript:void(0);"><i class="fab fa-youtube"></i></a>
                     <a href="javascript:void(0);"><i class="fab fa-linkedin-in"></i></a>
                 </div>
-                <button type="button" class="left-margin-15 btn btn-outline-primary my-btn mt-3">⮟ View My Portfolio ⮟</button>
+                <button id="cv" type="button" class="left-margin-15 btn btn-outline-primary my-btn mt-3"><span
+                        class="download">Download my CV ⭳</span></button>
             </div>
         </div>
         <!-- Start Right Content -->
-        <div class="col-md-8 col-sm-12 order-1 order-md-2 text-right xs-text-center xs-border-bottom xs-padding-nineteen-half-lr border-color-medium-gray">
+        <div class="pic">
             <img src="images/Avatar.png" height="500">
         </div>
     </div>
+</div>
+
+<div class="container">
+    <h3 id="about">About</h3>
+    <blockquote class="blockquote">
+        <p class="mb-0"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur culpa cumque ducimus ea eos hic illo libero placeat quae rerum, soluta sunt voluptate. Beatae delectus iusto saepe unde voluptatem.</span><span>Accusantium aliquam enim fuga maiores numquam! Aliquam asperiores autem dignissimos eveniet, expedita inventore ipsa laborum laudantium nihil, nisi numquam officiis placeat quaerat quisquam quod recusandae repellat repellendus saepe suscipit, ullam.</span><span>Ab, adipisci aperiam asperiores assumenda consequuntur dolor doloremque eaque enim hic id incidunt ipsam iste maxime necessitatibus nesciunt nisi nulla numquam perspiciatis, praesentium provident quos repellat sunt tempore ut veniam!</span><span>Culpa dignissimos ducimus ea enim ipsam, magni maiores officia optio perspiciatis, quaerat soluta voluptates. Adipisci aliquam at consequatur, dolorum eum incidunt ipsa molestias obcaecati omnis pariatur reiciendis rerum sed vero.</span><span>Adipisci aspernatur assumenda at blanditiis consequatur cum earum est expedita fugiat illum incidunt ipsa molestias non omnis provident quas quibusdam quis rerum sequi temporibus tenetur totam, vel voluptas voluptate voluptatibus?</span>
+        </p>
+        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+    </blockquote>
+</div>
+
+<div class="container">
+    <h3 id="experience">Experience</h3>
+    <blockquote class="blockquote">
+        <p class="mb-0"><span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur illum magnam minima modi saepe? Aliquam architecto commodi consequatur cupiditate doloremque illo, illum ipsum minus nam, nobis quos repellendus suscipit temporibus.</span><span>Aliquid architecto asperiores blanditiis consequuntur culpa deserunt dolorem doloribus ea eaque eveniet explicabo facere ipsam iusto nemo nihil non, officiis, placeat quibusdam quisquam quo quos reiciendis repellendus saepe tenetur voluptate?</span><span>Distinctio dolores eum illo in necessitatibus odio qui quibusdam quod ratione sapiente. Aperiam beatae doloremque dolores et excepturi facilis illum iste molestiae obcaecati pariatur quaerat quia, saepe tempora tempore ullam.</span><span>Aliquam expedita impedit nam porro sint. Adipisci dolor dolorum fuga fugit, harum in, ipsam ipsum maiores obcaecati perferendis placeat quae quo, recusandae reiciendis sequi similique velit veniam! Ipsam, praesentium, quis.</span><span>Ad consequatur cupiditate dignissimos doloribus fugiat harum quam quia repellendus rerum voluptates. A aliquam atque beatae dolores doloribus expedita fugiat incidunt modi molestiae necessitatibus neque, odio officiis quasi veniam voluptates.</span><span>Atque distinctio fugit nesciunt. Aliquam aperiam aut cumque deserunt, dicta distinctio enim est, et fugiat impedit iusto maxime neque nesciunt perferendis porro quibusdam, quidem quo rem repudiandae sapiente tempore voluptate!</span><span>Autem blanditiis distinctio fugiat qui recusandae! Aliquam deleniti dolor eaque, et ipsam iste itaque magnam nisi perferendis praesentium quaerat quo repellendus vero voluptate voluptatibus. Architecto atque eius impedit laudantium numquam.</span><span>Alias iste, laboriosam laudantium molestiae necessitatibus quae sed. Aut culpa eum hic illum ipsa, quo. Architecto esse hic illum rerum ut voluptates? Accusamus, cum ea eaque eveniet obcaecati voluptatem voluptatum?</span><span>Asperiores consectetur distinctio maxime necessitatibus nesciunt numquam perspiciatis sapiente ut! Consequatur dicta ducimus eos ex expedita facere facilis ipsam, itaque laborum minus molestiae molestias nemo odio omnis provident quam vero?</span><span>Accusamus aliquid assumenda corporis dicta dolorem esse illum modi neque provident repudiandae sed, sit soluta vero. A aperiam cumque cupiditate incidunt magni modi provident quam qui reprehenderit suscipit ut, veritatis!</span><span>Accusantium at cum dolorem doloribus ducimus hic in laboriosam libero molestias mollitia, optio placeat praesentium, quibusdam, reiciendis repellendus tempore voluptatum. Ab blanditiis dolore id ipsam odit. Animi, enim, voluptates! Autem?</span><span>At atque culpa cum excepturi non placeat porro provident, quibusdam reiciendis vero. Amet aspernatur culpa dolore eligendi possimus quisquam repellat, temporibus veritatis! Aliquam assumenda at distinctio hic, modi officiis suscipit.</span><span>Accusamus at beatae deserunt doloribus eum ex incidunt ipsam magnam minus nobis repudiandae soluta totam veniam voluptate, voluptatibus? Asperiores, commodi eum harum illum molestiae molestias quae ratione recusandae sunt temporibus?</span><span>Blanditiis dolor ducimus expedita, illum libero nulla reiciendis temporibus ullam vitae voluptatum? Ab amet blanditiis commodi consequuntur, distinctio dolor ducimus ea excepturi, ipsum nobis omnis pariatur quam sequi veniam vero!</span><span>Amet eius totam unde velit. Cupiditate doloremque fugit ipsum laboriosam laborum perferendis repellendus. Accusantium dolor, dolorem error fugiat in iste iure, libero natus obcaecati perferendis quisquam sequi soluta ullam velit.</span></span>
+        </p>
+        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+    </blockquote>
+</div>
+
+<div class="container">
+    <h3 id="portfolio">Portfolio</h3>
+    <blockquote class="blockquote">
+        <p class="mb-0"><span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur illum magnam minima modi saepe? Aliquam architecto commodi consequatur cupiditate doloremque illo, illum ipsum minus nam, nobis quos repellendus suscipit temporibus.</span><span>Aliquid architecto asperiores blanditiis consequuntur culpa deserunt dolorem doloribus ea eaque eveniet explicabo facere ipsam iusto nemo nihil non, officiis, placeat quibusdam quisquam quo quos reiciendis repellendus saepe tenetur voluptate?</span><span>Distinctio dolores eum illo in necessitatibus odio qui quibusdam quod ratione sapiente. Aperiam beatae doloremque dolores et excepturi facilis illum iste molestiae obcaecati pariatur quaerat quia, saepe tempora tempore ullam.</span><span>Aliquam expedita impedit nam porro sint. Adipisci dolor dolorum fuga fugit, harum in, ipsam ipsum maiores obcaecati perferendis placeat quae quo, recusandae reiciendis sequi similique velit veniam! Ipsam, praesentium, quis.</span><span>Ad consequatur cupiditate dignissimos doloribus fugiat harum quam quia repellendus rerum voluptates. A aliquam atque beatae dolores doloribus expedita fugiat incidunt modi molestiae necessitatibus neque, odio officiis quasi veniam voluptates.</span><span>Atque distinctio fugit nesciunt. Aliquam aperiam aut cumque deserunt, dicta distinctio enim est, et fugiat impedit iusto maxime neque nesciunt perferendis porro quibusdam, quidem quo rem repudiandae sapiente tempore voluptate!</span><span>Autem blanditiis distinctio fugiat qui recusandae! Aliquam deleniti dolor eaque, et ipsam iste itaque magnam nisi perferendis praesentium quaerat quo repellendus vero voluptate voluptatibus. Architecto atque eius impedit laudantium numquam.</span><span>Alias iste, laboriosam laudantium molestiae necessitatibus quae sed. Aut culpa eum hic illum ipsa, quo. Architecto esse hic illum rerum ut voluptates? Accusamus, cum ea eaque eveniet obcaecati voluptatem voluptatum?</span><span>Asperiores consectetur distinctio maxime necessitatibus nesciunt numquam perspiciatis sapiente ut! Consequatur dicta ducimus eos ex expedita facere facilis ipsam, itaque laborum minus molestiae molestias nemo odio omnis provident quam vero?</span><span>Accusamus aliquid assumenda corporis dicta dolorem esse illum modi neque provident repudiandae sed, sit soluta vero. A aperiam cumque cupiditate incidunt magni modi provident quam qui reprehenderit suscipit ut, veritatis!</span><span>Accusantium at cum dolorem doloribus ducimus hic in laboriosam libero molestias mollitia, optio placeat praesentium, quibusdam, reiciendis repellendus tempore voluptatum. Ab blanditiis dolore id ipsam odit. Animi, enim, voluptates! Autem?</span><span>At atque culpa cum excepturi non placeat porro provident, quibusdam reiciendis vero. Amet aspernatur culpa dolore eligendi possimus quisquam repellat, temporibus veritatis! Aliquam assumenda at distinctio hic, modi officiis suscipit.</span><span>Accusamus at beatae deserunt doloribus eum ex incidunt ipsam magnam minus nobis repudiandae soluta totam veniam voluptate, voluptatibus? Asperiores, commodi eum harum illum molestiae molestias quae ratione recusandae sunt temporibus?</span><span>Blanditiis dolor ducimus expedita, illum libero nulla reiciendis temporibus ullam vitae voluptatum? Ab amet blanditiis commodi consequuntur, distinctio dolor ducimus ea excepturi, ipsum nobis omnis pariatur quam sequi veniam vero!</span><span>Amet eius totam unde velit. Cupiditate doloremque fugit ipsum laboriosam laborum perferendis repellendus. Accusantium dolor, dolorem error fugiat in iste iure, libero natus obcaecati perferendis quisquam sequi soluta ullam velit.</span></span>
+        </p>
+        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+    </blockquote>
 </div>
 
 <!-- ------------------------------------------------------------------------------ -->
