--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Aleks`s web (SPA)</title>
+    <title>Aleks - SPA</title>
     <link rel="icon" href="./images/favicon.png">
     <!-- CSS -->
-    <!-- bootstrap link -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- my Style link -->
 
+    <!-- my css -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- bootstrap theme -->
     <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <!-- notifications css -->
     <link rel="stylesheet" href="styles/notifications.css">
 
     <!-- JS -->
 
-    <!-- note modules -->
+    <!-- note_modules -->
 
     <!-- jQuery -->
     <script src="https://drive.google.com/uc?export=view&id=1NOOB-e8-S8_LqA0alP4bVNK5MLwDVN7B"></script>
@@ -27,12 +26,15 @@
     <script src="https://drive.google.com/uc?export=view&id=196Rkf7v-MNFW6OC8BY6uPN1-u3FNkyqw"></script>
     <!-- sammy.handlebars.js -->
     <script src="https://drive.google.com/uc?export=view&id=1pXqi1HUzmSy5fRLekv-LyGJKQper7sX3"></script>
+    <!-- bootstrap.js -->
+    <script src="https://drive.google.com/uc?export=view&id=1bWx6BIrb7GCYVdPkbwWrBwYjk1xYYL6e"></script>
+
 
     <!-- default -->
-    <script src="scripts/kinvey.js"></script>
+    <script src="scripts/utils/kinvey.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/notify.js"></script>
-    <script src="scripts/events.js"></script>
+    <script src="scripts/utils/notify.js"></script>
+    <script src="scripts/utils/events.js"></script>
 
     <!-- Services -->
     <script src="scripts/services/user-service.js"></script>
@@ -65,11 +67,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-<!-- bootstrap JS script -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
 
 </body>
 
