--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
 
+<script src="scripts/utils/fixNav.js"></script>
+
 </body>
 
 </html>
