--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 </head>
 
 <body>
+<canvas id="c" style="width:100%; height:100%;"></canvas>
+<script>m3x()</script>
 <div id="root"></div>
 <div id="notifications">
     <div id="loadingBox" class="notification">
-        <span>Loading...</span>
+        <span>System loading...</span>
     </div>
     <div id="infoBox" class="notification">
         <span>Info</span>
@@ -67,7 +69,6 @@
         crossorigin="anonymous"></script>
 
 <script src="scripts/utils/fixNav.js"></script>
-
 </body>
 
 </html>
