matrix size fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-<canvas id="c" style="width:100%; height:100%;"></canvas>
+<canvas id="c"></canvas>
 <script>m3x()</script>
 <div id="root"></div>
 <div id="notifications">
