--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Aleks - SPA</title>
+    <title>Aleksandar Hristov | Front-Еnd Developer & Designer</title>
     <link rel="icon" href="./images/favicon.png">
     <!-- CSS -->
 
