page loading animation

--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 </head>
 
 <body>
+<script>loadingPage()</script>
 <canvas id="c"></canvas>
 <script>m3x()</script>
-<div id="root"></div>
-<div id="notifications">
+<div id="root" style="display: none"></div>
+<div id="notifications" style="display: none">
     <div id="loadingBox" class="notification">
         <span>System loading...</span>
     </div>
