--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 <canvas id="c"></canvas>
 <script>m3x()</script>
 <div id="root" style="display: none"></div>
+
+<div id="googleInfo" style="display: none">
+    <h1 class="t title">Aleksandar Hristov's portfolio</h1>
+    <h2 class="st subtitle">Front-Еnd Developer & Designer</h2>
+</div>
+
 <div id="notifications" style="display: none">
-    <div id="loadingBox" class="notification">
-        <span>System loading...</span>
-    </div>
-    <div id="infoBox" class="notification">
-        <span>Info</span>
-    </div>
-    <div id="errorBox" class="notification">
-        <span>Error</span>
-    </div>
+    <div id="loadingBox" class="notification"><span></span></div>
+    <div id="infoBox" class="notification"><span></span></div>
+    <div id="errorBox" class="notification"><span></span></div>
 </div>
 
 <!-- popper script -->
