--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 <div id="root" style="display: none"></div>
 
 <div id="googleInfo" style="display: none">
-    <h1 class="t title">Aleksandar Hristov's portfolio</h1>
-    <h2 class="st subtitle">Front-Еnd Developer & Designer</h2>
+    <h1 class="st">Hello, at my website you can find my resume, portfolio and contacts</h1>
 </div>
 
 <div id="notifications" style="display: none">
