--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <script src="scripts/controllers/array-controller.js"></script>
     <script src="scripts/controllers/user-controller.js"></script>
 
+    <meta property="og:image" content="./images/social-media-cover.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="340">
+
 </head>
 
 <body>
