--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="340">
+    <meta property="og:description" content="Hello, at my website you can find my resume, portfolio and contacts">
 
 </head>
 
@@ -57,7 +58,6 @@
 <canvas id="c"></canvas>
 <script>m3x()</script>
 <div id="root" style="display: none"></div>
-
 <div id="googleInfo" style="display: none">
     <h1 class="st">Hello, at my website you can find my resume, portfolio and contacts</h1>
 </div>
