--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <script src="scripts/controllers/array-controller.js"></script>
     <script src="scripts/controllers/user-controller.js"></script>
 
-    <meta property="og:image" content="./images/social-media-cover.png">
+    <meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer & Designer">
+    <meta property="og:url" content="http://alekshristov.com/">
+    <meta property="og:image" content="http://alekshristov.com/images/social-media-cover.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="340">
