--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Aleksandar Hristov | Front-Еnd Developer & Designer</title>
     <link rel="icon" href="./images/favicon.png">
-    <!-- CSS -->
 
     <!-- my css -->
     <link rel="stylesheet" href="styles/style.css">
@@ -13,10 +12,6 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <!-- notifications css -->
     <link rel="stylesheet" href="styles/notifications.css">
-
-    <!-- JS -->
-
-    <!-- note_modules -->
 
     <!-- jQuery -->
     <script src="https://drive.google.com/uc?export=view&id=1NOOB-e8-S8_LqA0alP4bVNK5MLwDVN7B"></script>
@@ -28,7 +23,6 @@
     <script src="https://drive.google.com/uc?export=view&id=1pXqi1HUzmSy5fRLekv-LyGJKQper7sX3"></script>
     <!-- bootstrap.js -->
     <script src="https://drive.google.com/uc?export=view&id=1bWx6BIrb7GCYVdPkbwWrBwYjk1xYYL6e"></script>
-
 
     <!-- default -->
     <script src="scripts/utils/kinvey.js"></script>
@@ -45,13 +39,14 @@
     <script src="scripts/controllers/array-controller.js"></script>
     <script src="scripts/controllers/user-controller.js"></script>
 
+    <!-- Social media links -->
     <meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer & Designer">
-    <meta property="og:url" content="http://alekshristov.com/">
+    <meta property="og:url" content="http://alekshristov.com">
     <meta property="og:image" content="http://alekshristov.com/images/social-media-cover.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="340">
-    <meta property="og:description" content="Hello, at my website you can find my resume, portfolio and contacts">
+    <meta property="og:description" content="At my website you can find my resume, portfolio and contacts">
 
 </head>
 
@@ -60,10 +55,6 @@
 <canvas id="c"></canvas>
 <script>m3x()</script>
 <div id="root" style="display: none"></div>
-<div id="googleInfo" style="display: none">
-    <h1 class="st">Hello, at my website you can find my resume, portfolio and contacts</h1>
-</div>
-
 <div id="notifications" style="display: none">
     <div id="loadingBox" class="notification"><span></span></div>
     <div id="infoBox" class="notification"><span></span></div>
