--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <title>Aleksandar Hristov | Front-Еnd Developer & Designer</title>
+    <meta name="Description" content="At my website you can find my resume, portfolio and contacts">
     <link rel="icon" href="./images/favicon.png">
 
     <!-- my css -->
@@ -42,11 +43,11 @@
     <!-- Social media links -->
     <meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer & Designer">
     <meta property="og:url" content="http://alekshristov.com">
-    <meta property="og:image" content="http://alekshristov.com/images/social-media-cover.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="400">
-    <meta property="og:image:height" content="340">
-    <meta property="og:description" content="At my website you can find my resume, portfolio and contacts">
+    <meta property="og:image" content="//alekshristov.com/images/social-media-cover.jpg">
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="og:image:width" content="315"/>
+    <meta property="og:image:height" content="315"/>
+    <meta property="og:description" content="At my website you can find my resume, portfolio and contacts"/>
 
 </head>
 
