--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 <script>loadingPage()</script>
 <canvas id="c"></canvas>
 <script>m3x()</script>
-<div id="root" style="display: none"></div>
+<div id="root" style="display: none">
+    <h1 style="display:none;">At my website you can find my resume, portfolio and contacts</h1>
+</div>
 <div id="notifications" style="display: none">
     <div id="loadingBox" class="notification"><span></span></div>
     <div id="infoBox" class="notification"><span></span></div>
