--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
     <!-- Services -->
     <script src="scripts/services/user-service.js"></script>
     <script src="scripts/services/info-service.js"></script>
-
+    
+    <!-- db -->
+    <script type="module" src="db/portfolio.js"></script>
+    
     <!-- Controllers -->
     <script src="scripts/controllers/home-controller.js"></script>
-    <script src="scripts/controllers/array-controller.js"></script>
+    <script type="module" src="scripts/controllers/array-controller.js"></script>
     <script src="scripts/controllers/user-controller.js"></script>
 
     <!-- Social media links -->
