--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 <body>
     <script>
         window.onload = function() {
-            window.location.href = "https://alekshristov.com/#404";
+            window.location.href = "https://alekshristov.com/#/404";
         }
     </script>
 </body>
