add mobile styles

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Aleksandar Hristov | Front-Еnd Developer & Designer</title>
     <meta name="Description" content="At my website you can find my resume, portfolio and contacts">
     <link rel="icon" href="./images/favicon.png">
-
-    <!-- my css -->
-    <link rel="stylesheet" href="styles/style.css">
+    
     <!-- bootstrap theme -->
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <!-- notifications css -->
     <link rel="stylesheet" href="styles/notifications.css">
-
+    <!-- my css -->
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media.css">
+    
     <!-- jQuery -->
     <script src="https://drive.google.com/uc?export=view&id=1NOOB-e8-S8_LqA0alP4bVNK5MLwDVN7B"></script>
     <!-- handlebars.js -->
