add mobile styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Aleksandar Hristov | Front-Еnd Developer & Designer</title>
     <meta name="Description" content="At my website you can find my resume, portfolio and contacts">
-    <link rel="icon" href="./images/favicon.png">
+    <link rel="icon" href="./images/favicon.svg">
     
     <!-- bootstrap theme -->
     <link rel="stylesheet" href="styles/bootstrap.min.css">
