change site bgrd

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
 <body>
 <script>loadingPage()</script>
-<canvas id="c"></canvas>
-<script>m3x()</script>
+    <canvas id="background"></canvas>
+    <script src="scripts/utils/particles.min.js"></script>
 <div id="root" style="display: none">
     <h1 style="display:none;">At my website you can find my resume, portfolio and contacts</h1>
 </div>
