--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 
 <body>
 <script>loadingPage()</script>
-    <canvas id="background"></canvas>
-    <script src="scripts/utils/particles.min.js"></script>
+
+<script src="scripts/utils/tsparticles.min.js" crossorigin="anonymous"></script>
+<div id="tsparticles"></div>
+
 <div id="root" style="display: none">
     <h1 style="display:none;">At my website you can find my resume, portfolio and contacts</h1>
 </div>
