--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="At my website you can find my resume, portfolio and contacts">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Social media links -->
+    <meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer & Designer">
+    <meta property="og:url" content="http://alekshristov.com">
+    <meta property="og:image" content="//alekshristov.com/images/social-media-cover.jpg">
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="og:image:width" content="315"/>
+    <meta property="og:image:height" content="315"/>
+    <meta property="og:description" content="At my website you can find my resume, portfolio and contacts"/>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Aleksandar Hristov | Front-Еnd Developer & Designer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
