--- a/index.html
+++ b/index.html
@@ -1,71 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-    <meta charset="UTF-8">
-    <title>Aleks`s web (SPA)</title>
-    <link rel="icon" href="./images/favicon.png">
-    <!-- CSS -->
-    <!-- bootstrap link -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- my Style link -->
-
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/notifications.css">
-
-    <!-- JS -->
-
-    <!-- note modules -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
-    <script src="node_modules/sammy/lib/sammy.js"></script>
-    <script src="node_modules/sammy/lib/plugins/sammy.handlebars.js"></script>
-
-    <!-- default -->
-    <script src="scripts/kinvey.js"></script>
-    <script src="scripts/app.js"></script>
-    <script src="scripts/notify.js"></script>
-    <script src="scripts/events.js"></script>
-
-    <!-- Services -->
-    <script src="scripts/services/user-service.js"></script>
-    <script src="scripts/services/info-service.js"></script>
-
-    <!-- Controllers -->
-    <script src="scripts/controllers/home-controller.js"></script>
-    <script src="scripts/controllers/info-controller.js"></script>
-    <script src="scripts/controllers/user-controller.js"></script>
-
-</head>
-
-<body>
-
-<div id="root"></div>
-
-<div id="notifications">
-    <div id="loadingBox" class="notification">
-        <span>Loading...</span>
-    </div>
-    <div id="infoBox" class="notification">
-        <span>Info</span>
-    </div>
-    <div id="errorBox" class="notification">
-        <span>Error</span>
-    </div>
-</div>
-
-<!-- popper script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<!-- bootstrap JS script -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.svg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="At my website you can find my resume, portfolio and contacts"><link rel="apple-touch-icon" href="/favicon.svg"/><meta name="viewport" content="width=device-width,initial-scale=1"><meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer & Designer"><meta property="og:url" content="http://alekshristov.com"><meta property="og:image" content="//alekshristov.com/images/social-media-cover.jpg"><meta property="og:image:type" content="image/jpeg"/><meta property="og:image:width" content="315"/><meta property="og:image:height" content="315"/><meta property="og:description" content="At my website you can find my resume, portfolio and contacts"/><link rel="manifest" href="/manifest.json"/><title>Aleksandar Hristov | Front-Еnd Developer & Designer</title><link href="/static/css/main.0e91931f.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,l,a=r[0],f=r[1],i=r[2],p=0,s=[];p<a.length;p++)l=a[p],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in f)Object.prototype.hasOwnProperty.call(f,n)&&(e[n]=f[n]);for(c&&c(r);s.length;)s.shift()();return u.push.apply(u,i||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,a=1;a<t.length;a++){var f=t[a];0!==o[f]&&(n=!1)}n&&(u.splice(r--,1),e=l(l.s=t[0]))}return e}var n={},o={1:0},u=[];function l(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,l),t.l=!0,t.exports}l.m=e,l.c=n,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,r){if(1&r&&(e=l(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)l.d(t,n,function(r){return e[r]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/";var a=this["webpackJsonpaleks-react"]=this["webpackJsonpaleks-react"]||[],f=a.push.bind(a);a.push=r,a=a.slice();for(var i=0;i<a.length;i++)r(a[i]);var c=f;t()}([])</script><script src="/static/js/2.e276aca7.chunk.js"></script><script src="/static/js/main.5b17a063.chunk.js"></script></body></html>
