--- a/404.html
+++ b/404.html
@@ -5,16 +5,17 @@
     <title>Single Page Apps for GitHub Pages</title>
     <script type="text/javascript">
       
-      let pathSegmentsToKeep = 0;
+        // if it's on index.html
+      if (window.sessionStorage.path) {
+      let path = window.sessionStorage.path; // gets the path saved on sessionStorage
+      window.history.pushState(null, null, path); // push it on url
+      window.sessionStorage.removeItem('path'); // removes from session
 
-      let l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+      } else { // if it's on 404.html (path doens't exist)
+        let path = window.location.pathname; // get the path url
+        window.sessionStorage.path = path; // saves on sessionStorage
+        window.location.href = '/'; // go to index
+      }
 
     </script>
   </head>
