--- a/404.html
+++ b/404.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
-    <script type="text/javascript">
-      
-        // if it's on index.html
-      if (window.sessionStorage.path) {
-      let path = window.sessionStorage.path; // gets the path saved on sessionStorage
-      window.history.pushState(null, null, path); // push it on url
-      window.sessionStorage.removeItem('path'); // removes from session
+<head>
+  <title>GitHub Pages - Virtual Path Routing?</title>
+</head>
+<body>
 
-      } else { // if it's on 404.html (path doens't exist)
-        let path = window.location.pathname; // get the path url
-        window.sessionStorage.path = path; // saves on sessionStorage
-        window.location.href = '/'; // go to index
-      }
+<h1>404 Handler</h1>
 
-    </script>
-  </head>
-  <body>
-  </body>
+<dl>
+  <dt>Current browser path</dt>
+  <dd id="browser-path">Loading&hellip;</dd>
+</dl>
+
+<script>
+window.onload = function() {
+  const node = document.getElementById( 'browser-path' );
+
+  node.innerHTML = document.location.toString();
+}
+</script>
+</body>
 </html>
