--- a/404.html
+++ b/404.html
@@ -6,17 +6,7 @@
 
 <h1>404 Handler</h1>
 
-<dl>
-  <dt>Current browser path</dt>
-  <dd id="browser-path">Loading&hellip;</dd>
-</dl>
-
-<script>
-window.onload = function() {
-  const node = document.getElementById( 'browser-path' );
-
-  node.innerHTML = document.location.toString();
-}
+<script
 </script>
 </body>
 </html>
