add more mobile styles

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Social media links -->
-    <meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer & Designer">
+    <meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer">
     <meta property="og:url" content="http://alekshristov.com">
-    <meta property="og:image" content="//alekshristov.com/images/social-media-cover.jpg">
+    <meta property="og:image" content="//alekshristov.com/assets/img/social-media-cover.jpg">
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="315"/>
     <meta property="og:image:height" content="315"/>
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aleksandar Hristov | Front-Еnd Developer & Designer</title>
+    <title>Aleksandar Hristov | Front-Еnd Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
