--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 
     <!-- Social media links -->
     <meta property="og:title" content="Aleksandar Hristov | Front-Еnd Developer">
-    <meta property="og:url" content="http://alekshristov.com">
-    <meta property="og:image" content="//alekshristov.com/assets/img/social-media-cover.jpg">
+    <meta property="og:url" content="https://alekshristov.com">
+    <meta property="og:image" content="https://alekshristov.com/assets/img/social-media-cover.jpg">
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="315"/>
     <meta property="og:image:height" content="315"/>
