--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="At my website you can find my resume, portfolio and contacts">
+    <meta name="description" content="At my website you can find my resume, portfolio and contacts © Aleksov">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="315"/>
     <meta property="og:image:height" content="315"/>
-    <meta property="og:description" content="At my website you can find my resume, portfolio and contacts"/>
+    <meta property="og:description" content="At my website you can find my resume, portfolio and contacts © Aleksov"/>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
